data/derived/comb/progs/unify/prog7105.ml.out
Characters 59-69:
  if n != 0 then (n mod 10)
                 ^^^^^^^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
